--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-native": "0.70.3",
     "react-native-gesture-handler": "^2.7.1",
     "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^2.11.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-toast-message": "^2.1.5",
